[gd_scene load_steps=124 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/smash3.png" type="Texture" id=2]
[ext_resource path="res://assets/smash1.png" type="Texture" id=3]
[ext_resource path="res://assets/smash2.png" type="Texture" id=4]
[ext_resource path="res://Smash.gd" type="Script" id=5]
[ext_resource path="res://assets/smash4.png" type="Texture" id=6]
[ext_resource path="res://assets/Stroheim-Sheet.png" type="Texture" id=7]
[ext_resource path="res://assets/Stroheim-Sheet-gun.png" type="Texture" id=8]
[ext_resource path="res://layout_elements/HealthBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Stroheim-Regular-Punch.png" type="Texture" id=10]
[ext_resource path="res://assets/Stroheim-Hamon-Punch.png" type="Texture" id=11]
[ext_resource path="res://assets/Stroheim-LaserEye-Movement.png" type="Texture" id=12]
[ext_resource path="res://assets/Stroheim-Sprint.png" type="Texture" id=13]
[ext_resource path="res://assets/Stroheim-Sliding.png" type="Texture" id=14]
[ext_resource path="res://assets/Stroheim-Double-Punch.png" type="Texture" id=15]
[ext_resource path="res://assets/Stroheim-Knee-Attack.png" type="Texture" id=16]
[ext_resource path="res://assets/Stroheim-Ledge-Grab.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 100, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 0, 200, 100, 100 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": false,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 100, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 200, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 300, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 400, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 500, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 600, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 700, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 800, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 900, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 1000, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 1100, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 1200, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 1300, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 1400, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 1500, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 1600, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 1700, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 1800, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 1900, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 2000, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 2100, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 2200, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 2300, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 2400, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 2500, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 2600, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 2700, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 2800, 0, 100, 120 )

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 10 )
region = Rect2( 100, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 10 )
region = Rect2( 400, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 10 )
region = Rect2( 500, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 10 )
region = Rect2( 700, 0, 100, 120 )

[sub_resource type="SpriteFrames" id=52]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 11 )
region = Rect2( 100, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 11 )
region = Rect2( 200, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 11 )
region = Rect2( 300, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 11 )
region = Rect2( 400, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 11 )
region = Rect2( 500, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 11 )
region = Rect2( 600, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 11 )
region = Rect2( 700, 0, 100, 120 )

[sub_resource type="SpriteFrames" id=61]
animations = [ {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 12 )
region = Rect2( 100, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 12 )
region = Rect2( 200, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 12 )
region = Rect2( 300, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 12 )
region = Rect2( 400, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 12 )
region = Rect2( 500, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 12 )
region = Rect2( 600, 0, 100, 120 )

[sub_resource type="SpriteFrames" id=69]
animations = [ {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 13 )
region = Rect2( 100, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 13 )
region = Rect2( 200, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 13 )
region = Rect2( 300, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 13 )
region = Rect2( 400, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 13 )
region = Rect2( 500, 0, 100, 120 )

[sub_resource type="SpriteFrames" id=76]
animations = [ {
"frames": [ SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 100, 120 )

[sub_resource type="SpriteFrames" id=78]
animations = [ {
"frames": [ SubResource( 77 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 88, 107 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 15 )
region = Rect2( 88, 0, 88, 107 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 15 )
region = Rect2( 176, 0, 88, 107 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 15 )
region = Rect2( 264, 0, 88, 107 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 15 )
region = Rect2( 352, 0, 88, 107 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 15 )
region = Rect2( 440, 0, 88, 107 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 15 )
region = Rect2( 528, 0, 88, 107 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 15 )
region = Rect2( 616, 0, 88, 107 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 15 )
region = Rect2( 704, 0, 88, 107 )

[sub_resource type="SpriteFrames" id=88]
animations = [ {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 16 )
region = Rect2( 100, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 16 )
region = Rect2( 200, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 16 )
region = Rect2( 300, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 16 )
region = Rect2( 400, 0, 100, 120 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 16 )
region = Rect2( 500, 0, 100, 120 )

[sub_resource type="SpriteFrames" id=95]
animations = [ {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 140, 120 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 17 )
region = Rect2( 140, 0, 140, 120 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 17 )
region = Rect2( 280, 0, 140, 120 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 17 )
region = Rect2( 420, 0, 140, 120 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 17 )
region = Rect2( 560, 0, 140, 120 )

[sub_resource type="SpriteFrames" id=101]
animations = [ {
"frames": [ SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=102]
extents = Vector2( 10.9741, 9.35257 )

[sub_resource type="RectangleShape2D" id=103]
extents = Vector2( 24, 40.9254 )

[sub_resource type="RectangleShape2D" id=104]
extents = Vector2( 22.2146, 25.0097 )

[sub_resource type="RectangleShape2D" id=105]
extents = Vector2( 49.6474, 110.783 )

[sub_resource type="RectangleShape2D" id=106]
extents = Vector2( 14.7282, 11.654 )

[node name="Player" type="KinematicBody2D" groups=[
"Persist",
]]
z_index = 1000
collision_layer = 264
collision_mask = 39
script = ExtResource( 1 )
jump_speed = 900

[node name="HealthBar" parent="." instance=ExtResource( 9 )]
margin_left = 0.708572
margin_top = -128.298
margin_right = 0.708572
margin_bottom = -128.298

[node name="Smash" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -2, 76 )
scale = Vector2( 0.226562, 0.226562 )
frames = SubResource( 1 )
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 2, 2 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_top = 0.0
drag_margin_bottom = 0.0

[node name="StandAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 0.769803, -7.12489 )
scale = Vector2( 2, 2 )
frames = SubResource( 4 )
frame = 1

[node name="WalkAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="JumpAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
frames = SubResource( 11 )

[node name="CrouchAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
frames = SubResource( 13 )

[node name="FireChestAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -27 )
scale = Vector2( 2, 2 )
frames = SubResource( 43 )
frame = 1

[node name="PunchAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -25 )
scale = Vector2( 2, 2 )
frames = SubResource( 52 )

[node name="HamonPunchAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -25 )
scale = Vector2( 2, 2 )
frames = SubResource( 61 )

[node name="LaserEyeAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -26 )
scale = Vector2( 2, 2 )
frames = SubResource( 69 )

[node name="SprintAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -27 )
scale = Vector2( 2, 2 )
frames = SubResource( 76 )

[node name="SlideAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -27 )
scale = Vector2( 2, 2 )
frames = SubResource( 78 )

[node name="DoublePunchAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0.999995, -26.7853 )
scale = Vector2( 2.22018, 2.22018 )
frames = SubResource( 88 )

[node name="KneeAttackAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -25 )
scale = Vector2( 2, 2 )
frames = SubResource( 95 )

[node name="LedgeGrabAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -25 )
scale = Vector2( 2, 2 )
frames = SubResource( 101 )

[node name="HeadCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0.59303, -84.4856 )
scale = Vector2( 2, 2 )
shape = SubResource( 102 )

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( -3, 13 )
scale = Vector2( 2, 2 )
shape = SubResource( 103 )

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( -127.925, 125.434 )
collision_layer = 8

[node name="HeadCollisionShape" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.0862745, 0.368627, 0.121569, 1 )
position = Vector2( 128.811, -210.685 )

[node name="BodyCollisionShape" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.0509804, 0.372549, 0.0509804, 1 )
position = Vector2( 124.92, -111.619 )

[node name="RegularFirePoint" type="Position2D" parent="."]
position = Vector2( 0, -55 )

[node name="ChestFirePoint" type="Position2D" parent="."]
position = Vector2( 56.8788, -27.3068 )

[node name="MustCrouchCheck" type="Area2D" parent="."]
collision_layer = 0

[node name="CrouchCheckCollider" type="CollisionShape2D" parent="MustCrouchCheck"]
position = Vector2( 0.938448, -99.4351 )
shape = SubResource( 104 )

[node name="PlatformCheck" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformCheck"]
position = Vector2( -3.551, -15 )
shape = SubResource( 105 )

[node name="GrabCheck" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabCheck"]
position = Vector2( 38.9519, -117.596 )
shape = SubResource( 106 )
[connection signal="flip_health_bar" from="." to="HealthBar" method="_on_Player_flip_health_bar"]
[connection signal="health" from="." to="HealthBar" method="_on_Player_health"]
[connection signal="smash_land" from="." to="Smash" method="_on_Player_smash_land"]
[connection signal="animation_finished" from="Smash" to="Smash" method="_on_Smash_animation_finished"]
[connection signal="animation_finished" from="FireChestAnimation" to="." method="_on_FireChestAnimation_animation_finished"]
[connection signal="frame_changed" from="FireChestAnimation" to="." method="_on_FireChestAnimation_frame_changed"]
[connection signal="animation_finished" from="PunchAnimation" to="." method="_on_PunchAnimation_animation_finished"]
[connection signal="animation_finished" from="HamonPunchAnimation" to="." method="_on_HamonPunchAnimation_animation_finished"]
[connection signal="animation_finished" from="DoublePunchAnimation" to="." method="_on_DoublePunchAnimation_animation_finished"]
[connection signal="animation_finished" from="KneeAttackAnimation" to="." method="_on_KneeAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="LedgeGrabAnimation" to="." method="_on_LedgeGrabAnimation_animation_finished"]
[connection signal="frame_changed" from="LedgeGrabAnimation" to="." method="_on_LedgeGrabAnimation_frame_changed"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_entered" from="MustCrouchCheck" to="." method="_on_MustCrouchCheck_body_entered"]
[connection signal="body_exited" from="MustCrouchCheck" to="." method="_on_MustCrouchCheck_body_exited"]
[connection signal="body_entered" from="PlatformCheck" to="." method="_on_PlatformCheck_body_entered"]
[connection signal="body_exited" from="PlatformCheck" to="." method="_on_PlatformCheck_body_exited"]
[connection signal="area_entered" from="GrabCheck" to="." method="_on_GrabCheck_area_entered"]
